Fix image overflow width

--- a/shop/css/shop-homepage.css
+++ b/shop/css/shop-homepage.css
@@ -34,6 +34,7 @@ body {
 }
 .thumbnail img {
     max-height: 100%;
+    max-width: 100%;
 }
 .ratings {
     padding-right: 10px;
